# ttsh

./: .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md  compile_commands.events.json  compile_commands.json  makefile
.cache/clangd/index/: main.c.FFC31CC6B202C19A.idx  test.h.7293F02D9E9CAA12.idx  utils.h.C5D2333ADE3621BE.idx
include/: ttsh_builtins.h  ttsh_config.h  ttsh_core.h  ttsh_execution.h  ttsh_input.h  ttsh_prompt.h  ttsh_rawmode.h  ttsh_tokenizer.h  ttsh_utils.h  utils.h
libs/linenoise/: linenoise.c  linenoise.h
src/: main.c  ttsh_builtins.c  ttsh_config.c  ttsh_core.c  ttsh_execution.c  ttsh_input.c  ttsh_prompt.c  ttsh_rawmode.c  ttsh_tokenizer.c  ttsh_utils.c  utils.c
